Fixed Message Bar spacing

--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@
   background-color: rgb(255, 255, 255);
   position: fixed; /* Set the navbar to fixed position */
   bottom: 0; /* Position the navbar at the bottom of the page */
-  width: 100%;
+  width: 90%;
 }
 
 .mainchat {
